--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                 </div>
 
                 <div style="width:1400px; height:800px;" id="map"></div>
-
+                <script type="text/javascript"
+                    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d8aa9ccc9b04c73a9f7e6164fd6cc9ef"></script>
                 <script>
                     var container = document.getElementById('map');
                     var options = {
